--- a/README.Rmd
+++ b/README.Rmd
@@ -18,6 +18,8 @@ knitr::opts_chunk$set(
 
 The goal of affinething is to provide simple control point georeferencing for un-mapped rasters. 
 
+The main functions are `affinething()` to collect drawn points interactively from an un-mapped raster image and `domath()` to calculate the extent of the raster in geographic terms and `assignproj()` to apply a map projection inline. There are some other experimental functions to write GDAL VRT `gdalvrt()` and to store some known cases for unmapped image sources.  
+
 ## Installation
 
 You can install the dev version of affinething from [GitHub](https://CRAN.R-project.org) with:
@@ -28,13 +30,13 @@ devtools::install_github("hypertidy/affinething")
 
 ## Example
 
-This examples takes an an un-mapped raster and georerences it by defining 
-some control points. 
+This examples takes an an un-mapped raster and [georefences](https://en.wikipedia.org/wiki/Georeferencing) it by defining some control points for a simple (offset and scale) [affine transformation](https://en.wikipedia.org/wiki/Affine_transformation). 
 
 
 Generally, we want **diagonal points**, so I tend to think "southwest" and "northeast", it doesn't really matter where they are as long as there's some pixels between them in both directions. Monterey Bay is very recognizable so I read off some long-lat control points using [mapview](https://r-spatial.github.io/mapview/).
 
 ```{r example}
+library(affinething)
 data("montereybay", package = "rayshader")
 
 
@@ -78,7 +80,7 @@ Now we have everything we need to re-map our raster! We don't need to project ou
 coordinate system as the source data. (In other situations we might georeference using a graticule on a projected map.)
 
 ```{r affine-remap}
-mapped <- affinething:::assignproj(setExtent(r, affinething:::domath(rbind(sw, ne), xy, r, proj = NULL)), prj)
+mapped <- assignproj(setExtent(r, domath(rbind(sw, ne), xy, r, proj = NULL)), prj)
 
 m <- rnaturalearth::ne_countries(country = "United States of America", scale = 10)
 plot(mapped, col = viridis::viridis(30))
@@ -91,9 +93,10 @@ contour(mapped, levels = -10, lty = 2, add = TRUE)
 
 
 
+
+```{r, eval = FALSE, include = FALSE, echo = FALSE}
 ## Old rough example
 
-```R
 r <- raster("dev/www.bom.gov.au/charts_data/IDY20001/current/windarrow/10m/2015-12-21/IDY20001.windarrow-10m.066.png")
 a <- regions("windAntarctica")
 projection(r) <- a$proj
@@ -114,3 +117,5 @@ gdalvrt(r, a_ullr = c(xmin(ex), ymax(ex), xmax(ex), ymin(ex)),
 ```
 
 
+
+Please note that the 'affinething' project is released with a [Contributor Code of Conduct](CODE_OF_CONDUCT.md). By contributing to this project, you agree to abide by its terms.
