--- a/README.Rmd
+++ b/README.Rmd
@@ -8,6 +8,7 @@ editor_options:
 
 <!-- badges: start -->
 [![Travis build status](https://travis-ci.org/hypertidy/affinity.svg?branch=master)](https://travis-ci.org/hypertidy/affinity)[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/hypertidy/affinity?branch=master&svg=true)](https://ci.appveyor.com/project/hypertidy/affinity)[![Codecov test coverage](https://codecov.io/gh/hypertidy/affinity/branch/master/graph/badge.svg)](https://codecov.io/gh/hypertidy/affinity?branch=master)[![CRAN status](https://www.r-pkg.org/badges/version/affinity)](https://CRAN.R-project.org/package=affinity)
+[![R-CMD-check](https://github.com/hypertidy/affinity/workflows/R-CMD-check/badge.svg)](https://github.com/hypertidy/affinity/actions)
 <!-- badges: end -->
   
   
