--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,7 @@
 ---
 output: github_document
-editor_options: 
-  chunk_output_type: console
 ---
+
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
@@ -10,8 +9,8 @@ editor_options:
 [![Travis build status](https://travis-ci.org/hypertidy/affinity.svg?branch=master)](https://travis-ci.org/hypertidy/affinity)[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/hypertidy/affinity?branch=master&svg=true)](https://ci.appveyor.com/project/hypertidy/affinity)[![Codecov test coverage](https://codecov.io/gh/hypertidy/affinity/branch/master/graph/badge.svg)](https://codecov.io/gh/hypertidy/affinity?branch=master)[![CRAN status](https://www.r-pkg.org/badges/version/affinity)](https://CRAN.R-project.org/package=affinity)
 [![R-CMD-check](https://github.com/hypertidy/affinity/workflows/R-CMD-check/badge.svg)](https://github.com/hypertidy/affinity/actions)
 <!-- badges: end -->
-  
-  
+
+
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
@@ -22,21 +21,21 @@ knitr::opts_chunk$set(
 ```
 # affinity
 
-The goal of affinity is to provide the basic tools used for raster grid georeferencing. This includes: 
+The goal of affinity is to provide the basic tools used for raster grid georeferencing. This includes:
 
 * the affine transform
 * the world file model
 * the GDAL RasterIO window model
 * basic tools for performing grid calculations
-* simple control point georeferencing for un-mapped rasters. 
+* simple control point georeferencing for un-mapped rasters.
 
 The main use at the moment is the ability to get a geotransform from an extent and dimension, this makes it easy to drive GDAL functions and to compare
-with the RasterIO logic in the sf package raster reader. 
+with the RasterIO logic in the sf package raster reader.
 
-The main functions for georeferencing are `affinething()` to collect drawn points interactively from an un-mapped raster image and `domath()` to calculate the extent of the raster in geographic terms and `assignproj()` to apply a map projection inline. There are some other experimental functions to write GDAL VRT `gdalvrt()` and to store some known cases for unmapped image sources.  
+The main functions for georeferencing are `affinething()` to collect drawn points interactively from an un-mapped raster image and `domath()` to calculate the extent of the raster in geographic terms and `assignproj()` to apply a map projection inline. There are some other experimental functions to write GDAL VRT `gdalvrt()` and to store some known cases for unmapped image sources.
 
 
-The basic tools still rely on the raster package. 
+The basic tools still rely on the raster package.
 
 ## Installation
 
@@ -48,19 +47,20 @@ devtools::install_github("hypertidy/affinity")
 
 ## Example
 
-This examples takes an an un-mapped raster and [georefences](https://en.wikipedia.org/wiki/Georeferencing) it by defining some control points for a simple (offset and scale) [affine transformation](https://en.wikipedia.org/wiki/Affine_transformation). 
+This examples takes an an un-mapped raster and [georefences](https://en.wikipedia.org/wiki/Georeferencing) it by defining some control points for a simple (offset and scale) [affine transformation](https://en.wikipedia.org/wiki/Affine_transformation).
 
 
 Generally, we want **diagonal points**, so I tend to think "southwest" and "northeast", it doesn't really matter where they are as long as there's some pixels between them in both directions. Monterey Bay is very recognizable so I read off some long-lat control points using [mapview](https://r-spatial.github.io/mapview/).
 
 ```{r example}
 library(affinity)
-data("montereybay", package = "rayshader")
+#data("montereybay", package = "rayshader")
+data("monterey", package = "affinity")
 
 
 library(raster)
 ## we know that rayshader works transpose
-r <- t(raster(montereybay))
+r <- t(raster(monterey))
 
 prj <- "+proj=longlat +datum=WGS84"
 ## the north tip of Pacific Grove
@@ -71,24 +71,30 @@ ne <- c(-121.78825, 36.80592)
 ```
 
 
-We can obtain raw (graphics) coordinates of those locations from our image, by plotting it and clicking twice with `affinething()`. 
+We can obtain raw (graphics) coordinates of those locations from our image, by plotting it and clicking twice with `affinething()`.
 
-Note the order, the first point is "sw" and the second is "ne" - the order is not important but it must match. 
+Note the order, the first point is "sw" and the second is "ne" - the order is not important but it must match.
 
 ```{r affine-thing, eval = FALSE}
 ## mask the raster so we can see easily where we need to click
 xy <- affinething(r > 0)
+
 ```
 
-In this example the points are 
+In this example the points are
 
 ```{r affine-thing-points}
-xy <- structure(c(0.65805655219227, 0.858931100128933, 0.367586425626388, 
-0.589597209007295), .Dim = c(2L, 2L), .Dimnames = list(NULL, 
+# xy <- structure(c(0.65805655219227, 0.858931100128933, 0.367586425626388,
+# 0.589597209007295), .Dim = c(2L, 2L), .Dimnames = list(NULL,
+#     c("x", "y")))
+xy <- structure(c(0.440321955368224, 0.580740883913579, 0.453408220576972,
+0.625733980086801), .Dim = c(2L, 2L), .Dimnames = list(NULL,
     c("x", "y")))
 ```
+
+Please note that if the matrix changes, then the values above will have to change as well (this has happened).
+
 ```{r affine-thing2, eval = TRUE, echo = FALSE}
-## mask the raster so we can see easily where we need to click
 plot(r > 0)
 points(xy)
 text(xy, lab = 1:2, pos = 4)
@@ -103,7 +109,7 @@ mapped <- assignproj(setExtent(r, domath(rbind(sw, ne), xy, r, proj = NULL)), pr
 m <- rnaturalearth::ne_countries(country = "United States of America", scale = 10)
 plot(mapped, col = viridis::viridis(30))
 plot(m, add = TRUE)
-contour(mapped, levels = -10, lty = 2, add = TRUE)
+contour(mapped, levels = -100, lty = 2, add = TRUE)
 
 #mv <- mapview::mapview(mapped)
 
